Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,6 @@ steps:
   displayName: "Run tests on electron"
   continueOnError: true
 
-- script: npm cy:run:chrome
-  displayName: "Run tests on chrome"
-  continueOnError: true
+# - script: npm cy:run:chrome
+#   displayName: "Run tests on chrome"
+#   continueOnError: true
